--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -122,188 +122,17 @@ body {
 	}
 }
 
-.wp-block[data-type="crown-blocks/promo"] {
-	&[data-align="wide"] .wp-block-crown-blocks-promo,
-	&[data-align="full"] .wp-block-crown-blocks-promo,
-	.wp-block-crown-blocks-promo.display-jumbo {
-		&.has-featured-image {
-			.promo-contents {
-				@include media-breakpoint-up(sm) {
-					text-align: left;
-				}
-				@include media-breakpoint-up(lg) {
-					max-width: calc(50% - (520px * 0.07027041735) - 5px);
-				}
-			}
-		}
-		> .inner,
-		> a > .inner {
-			@include media-breakpoint-up(lg) {
-				min-height: 520px;
-			}
-		}
-		.promo-contents {
-			> .inner {
-				@include media-breakpoint-up(lg) {
-					padding: 60px 40px 80px;
-					max-width: 900px + (40px * 2);
-				}
-			}
-		}
-		.promo-title {
-			@include font-size($h2-font-size);
-			@include media-breakpoint-up(lg) {
-				@include font-size($h1-font-size);
-			}
-		}
-		.promo-featured-image {
-			> .inner {
-				@include media-breakpoint-up(sm) {
-					border-left-width: 10px;
-				}
-			}
-		}
-		&.featured-image-left .promo-featured-image {
-			> .inner {
-				@include media-breakpoint-up(sm) {
-					border-left: none;
-					border-right-width: 10px;
-				}
-			}
-		}
-	}
-}
-
-.wp-block[data-type="crown-blocks/call-to-action"] {
-	&[data-align="left"],
-	&[data-align="right"] {
-		.is-block-content {
-			max-width: 400px;
-			margin-left: auto;
-			margin-right: auto;
-			@include media-breakpoint-up(md) {
-				width: calc(50% - 1em);
-				margin-left: 0;
-				margin-right: 0;
-			}
-		}
-	}
-	&[data-align="left"] {
-		.is-block-content {
-			@include media-breakpoint-up(md) {
-				margin-right: 2em;
-			}
-		}
-	}
-	&[data-align="right"] {
-		.is-block-content {
-			@include media-breakpoint-up(md) {
-				margin-left: 2em;
-			}
-		}
-	}
-}
-
-.wp-block[data-type="crown-blocks/recent-posts"] {
-	.wp-block-crown-blocks-recent-posts {
-		&.display-as-slider-mobile {
-			.post-feed.thumbnails {
-				article {
-					@include media-breakpoint-down(sm) {
-						display: none;
-						&:nth-child(1) {
-							display: block;
-						}
-					}
-				}
-			}
-		}
-		.post-feed.thumbnails {
-			> .inner {
-				@include media-breakpoint-up(sm) {
-					display: flex;
-					margin: 0 -15px;
-					justify-content: center;
-				}
-			}
-			article {
-				max-width: 645px;
-				@include media-breakpoint-up(sm) {
-					padding: 0 15px;
-					flex: 1 1 100%;
-					&:nth-child(3),
-					&:nth-child(4) {
-						display: none;
-					}
-				}
-				@include media-breakpoint-up(lg) {
-					&:nth-child(3) {
-						display: block;
-					}
-				}
-				@include media-breakpoint-up(xl) {
-					&:nth-child(4) {
-						display: block;
-					}
-				}
-			}
-		}
-	}
-}
-
-.wp-block[data-type="crown-blocks/testimonial-slider"] {
-	.wp-block-crown-blocks-testimonial-slider {
-		border: 1px dashed fade-out(#000, .6);
-		padding: 20px;
-		.text-color-light & { border-color: fade-out(#fff, .6); }
-		.text-color-dark & { border-color: fade-out(#000, .6); }
-		.testimonial-slider-testimonials {
-			> .inner {
-				display: block;
-				width: auto;
-				max-width: 900px;
-				position: relative;
-				left: 0;
-				transform: none;
-				margin: 0 auto;
-			}
-		}
-	}
-}
 
 .wp-block[data-type="crown-blocks/tabbed-content"] {
-	.wp-block-crown-blocks-tabbed-content {
-		border: 1px dashed fade-out(#000, .6);
-		padding: 20px;
+	> .crown-block-editor-container > .wp-block-crown-blocks-tabbed-content {
+		.tabbed-content-tabs {
+			> .inner {
+				display: block;
+			}
+		}
 	}
 }
 
-.wp-block[data-type="crown-blocks/tabbed-content-tab"] {
-	.wp-block-crown-blocks-tabbed-content-tab {
-		> .inner {
-			display: flex;
-			flex-wrap: wrap;
-		}
-		.tab-title {
-			color: #fff;
-			background-color: #888;
-			padding: 10px 16px;
-			line-height: 1.2;
-			font-size: 20px;
-			min-height: 44px;
-			min-width: 60px;
-			margin-bottom: -1px;
-			position: relative;
-			z-index: 1;
-			display: block;
-		}
-		.tab-contents {
-			flex: 0 0 100%;
-			border: 1px solid fade-out(#000, .8);
-			padding: 20px;
-		}
-	}
-}
 
 .wp-block[data-type="crown-blocks/container-featured-image"] {
 	+ .wp-block[data-type="crown-blocks/container-featured-image"] {
