--- a/wp-content/plugins/crown-blocks/src/block-tabbed-content-tab/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-tabbed-content-tab/editor.scss
@@ -1,5 +1,40 @@
 
 
 .wp-block[data-type="crown-blocks/tabbed-content-tab"] {
-	
+	> .crown-block-editor-container > .wp-block-crown-blocks-tabbed-content-tab {
+		> .inner {
+			display: flex;
+			flex-wrap: wrap;
+		}
+		.tab-title {
+			color: #fff;
+			background-color: fade-out(#000, .8);
+			padding: 10px 16px;
+			line-height: 1.2;
+			font-size: 20px;
+			min-height: 44px;
+			min-width: 60px;
+			position: relative;
+			margin: 0;
+			z-index: 1;
+			display: block;
+			.text-color-light & {
+				background-color: fade-out(#fff, .8);
+			}
+			.text-color-dark & {
+				background-color: fade-out(#000, .8);
+			}
+		}
+		.tab-contents {
+			flex: 0 0 100%;
+			border: 1px solid fade-out(#000, .6);
+			padding: 20px;
+			.text-color-light & {
+				border-color: fade-out(#fff, .6);
+			}
+			.text-color-dark & {
+				border-color: fade-out(#000, .6);
+			}
+		}
+	}
 }
