--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -14550,29 +14550,38 @@ h1 {
     .has-extra-extra-large-font-size {
       font-size: 3.75rem; } }
 
-blockquote {
-  font-style: italic; }
-  blockquote.has-photo {
-    padding-left: 80px;
-    position: relative;
-    min-height: 60px; }
-    blockquote.has-photo .blockquote-photo {
-      display: block; }
-  blockquote .blockquote-photo {
-    display: none;
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-radius: 1000px; }
-  blockquote .blockquote-footer {
-    margin-top: -0.5rem;
+blockquote,
+.wp-block-quote {
+  font-style: italic;
+  font-family: "utopia-std", serif;
+  padding-left: 0;
+  border-left: none; }
+  blockquote.is-style-large,
+  .wp-block-quote.is-style-large {
+    font-size: 1.875rem;
+    line-height: 1.4; }
+    blockquote.is-style-large p,
+    .wp-block-quote.is-style-large p {
+      font-size: inherit;
+      line-height: inherit; }
+    blockquote.is-style-large .wp-block-quote__citation,
+    blockquote.is-style-large cite,
+    .wp-block-quote.is-style-large .wp-block-quote__citation,
+    .wp-block-quote.is-style-large cite {
+      font-size: 1.125rem;
+      text-align: inherit; }
+  blockquote .wp-block-quote__citation,
+  blockquote cite,
+  .wp-block-quote .wp-block-quote__citation,
+  .wp-block-quote cite {
+    display: block;
+    margin-top: -0.25rem;
     font-size: 1rem;
     color: inherit;
-    font-weight: 700; }
-    blockquote .blockquote-footer:before {
-      content: "~\00A0"; }
+    font-weight: 400;
+    font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    opacity: 0.6;
+    font-style: normal; }
 
 ul.is-style-dashed {
   list-style: none;
@@ -16239,6 +16248,86 @@ nav.pagination {
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
           box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); }
 
+/*	Tabbed Content
+---------------------------------------------------------*/
+.text-color-light .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots button {
+  color: #FFFFFF; }
+
+.text-color-light .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots li:after {
+  border-color: #FFFFFF; }
+
+.text-color-dark .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots button {
+  color: #233053; }
+
+.text-color-dark .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots li:after {
+  border-color: #233053; }
+
+.wp-block-crown-blocks-tabbed-content .slick-slider-nav {
+  margin-bottom: 2rem; }
+  .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots {
+    list-style: none;
+    margin: 0 -1rem -1rem;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    @media (min-width: 992px) {
+      .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots {
+        margin: 0 -2rem -1rem; } }
+    .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots li {
+      margin: 0 1rem 1rem;
+      position: relative;
+      padding-bottom: 0.5rem; }
+      @media (min-width: 992px) {
+        .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots li {
+          margin: 0 2rem 1rem; } }
+      .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots li.slick-active:after {
+        left: 0;
+        right: 0;
+        opacity: 1; }
+      .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots li:after {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        opacity: 0;
+        bottom: 0;
+        -webkit-transition: left .2s ease-out, right .2s ease-out, opacity .2s;
+        transition: left .2s ease-out, right .2s ease-out, opacity .2s;
+        border-top: 0.25rem solid #233053; }
+    .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots button {
+      border: none;
+      padding: 0;
+      background-color: transparent;
+      font-size: 1.25rem;
+      line-height: 1.2;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      outline: none;
+      color: #233053; }
+      .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots button .index,
+      .wp-block-crown-blocks-tabbed-content .slick-slider-nav .slick-dots button .indicator {
+        display: none; }
+
+.wp-block-crown-blocks-tabbed-content .tabbed-content-tabs > .inner {
+  display: none; }
+  .wp-block-crown-blocks-tabbed-content .tabbed-content-tabs > .inner.slick-initialized {
+    display: block; }
+    .wp-block-crown-blocks-tabbed-content .tabbed-content-tabs > .inner.slick-initialized .slick-slide {
+      outline: none; }
+    .wp-block-crown-blocks-tabbed-content .tabbed-content-tabs > .inner.slick-initialized .tab-title {
+      display: none; }
+
 .gform_wrapper {
   margin-bottom: 1rem;
   text-align: left; }
@@ -16667,156 +16756,8 @@ body {
 .wp-block[data-type="crown-blocks/container"] > .crown-block-editor-container > .wp-block-crown-blocks-container > .inner > .container-contents > .inner > .block-editor-inner-blocks > .block-editor-block-list__layout > .block-editor-block-list__block:first-child {
   margin-top: 0; }
 
-@media (min-width: 576px) {
-  .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo.has-featured-image .promo-contents,
-  .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo.has-featured-image .promo-contents,
-  .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo.has-featured-image .promo-contents {
-    text-align: left; } }
-
-@media (min-width: 992px) {
-  .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo.has-featured-image .promo-contents,
-  .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo.has-featured-image .promo-contents,
-  .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo.has-featured-image .promo-contents {
-    max-width: calc(50% - (520px * 0.07027041735) - 5px); } }
-
-@media (min-width: 992px) {
-  .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo > .inner,
-  .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo > a > .inner,
-  .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo > .inner,
-  .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo > a > .inner,
-  .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo > .inner,
-  .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo > a > .inner {
-    min-height: 520px; } }
-
-@media (min-width: 992px) {
-  .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo .promo-contents > .inner,
-  .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo .promo-contents > .inner,
-  .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo .promo-contents > .inner {
-    padding: 60px 40px 80px;
-    max-width: 980px; } }
-
-.wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo .promo-title,
-.wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo .promo-title,
-.wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo .promo-title {
-  font-size: 2.5rem; }
-  @media (min-width: 992px) {
-    .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo .promo-title,
-    .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo .promo-title,
-    .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo .promo-title {
-      font-size: 3.75rem; } }
-
-@media (min-width: 576px) {
-  .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo .promo-featured-image > .inner,
-  .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo .promo-featured-image > .inner,
-  .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo .promo-featured-image > .inner {
-    border-left-width: 10px; } }
-
-@media (min-width: 576px) {
-  .wp-block[data-type="crown-blocks/promo"][data-align="wide"] .wp-block-crown-blocks-promo.featured-image-left .promo-featured-image > .inner,
-  .wp-block[data-type="crown-blocks/promo"][data-align="full"] .wp-block-crown-blocks-promo.featured-image-left .promo-featured-image > .inner,
-  .wp-block[data-type="crown-blocks/promo"] .wp-block-crown-blocks-promo.display-jumbo.featured-image-left .promo-featured-image > .inner {
-    border-left: none;
-    border-right-width: 10px; } }
-
-.wp-block[data-type="crown-blocks/call-to-action"][data-align="left"] .is-block-content, .wp-block[data-type="crown-blocks/call-to-action"][data-align="right"] .is-block-content {
-  max-width: 400px;
-  margin-left: auto;
-  margin-right: auto; }
-  @media (min-width: 768px) {
-    .wp-block[data-type="crown-blocks/call-to-action"][data-align="left"] .is-block-content, .wp-block[data-type="crown-blocks/call-to-action"][data-align="right"] .is-block-content {
-      width: calc(50% - 1em);
-      margin-left: 0;
-      margin-right: 0; } }
-
-@media (min-width: 768px) {
-  .wp-block[data-type="crown-blocks/call-to-action"][data-align="left"] .is-block-content {
-    margin-right: 2em; } }
-
-@media (min-width: 768px) {
-  .wp-block[data-type="crown-blocks/call-to-action"][data-align="right"] .is-block-content {
-    margin-left: 2em; } }
-
-@media (max-width: 767.98px) {
-  .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts.display-as-slider-mobile .post-feed.thumbnails article {
-    display: none; }
-    .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts.display-as-slider-mobile .post-feed.thumbnails article:nth-child(1) {
-      display: block; } }
-
-@media (min-width: 576px) {
-  .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts .post-feed.thumbnails > .inner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 -15px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
-
-.wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts .post-feed.thumbnails article {
-  max-width: 645px; }
-  @media (min-width: 576px) {
-    .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts .post-feed.thumbnails article {
-      padding: 0 15px;
-      -webkit-box-flex: 1;
-          -ms-flex: 1 1 100%;
-              flex: 1 1 100%; }
-      .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts .post-feed.thumbnails article:nth-child(3), .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts .post-feed.thumbnails article:nth-child(4) {
-        display: none; } }
-  @media (min-width: 992px) {
-    .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts .post-feed.thumbnails article:nth-child(3) {
-      display: block; } }
-  @media (min-width: 1200px) {
-    .wp-block[data-type="crown-blocks/recent-posts"] .wp-block-crown-blocks-recent-posts .post-feed.thumbnails article:nth-child(4) {
-      display: block; } }
-
-.wp-block[data-type="crown-blocks/testimonial-slider"] .wp-block-crown-blocks-testimonial-slider {
-  border: 1px dashed rgba(0, 0, 0, 0.4);
-  padding: 20px; }
-  .text-color-light .wp-block[data-type="crown-blocks/testimonial-slider"] .wp-block-crown-blocks-testimonial-slider {
-    border-color: rgba(255, 255, 255, 0.4); }
-  .text-color-dark .wp-block[data-type="crown-blocks/testimonial-slider"] .wp-block-crown-blocks-testimonial-slider {
-    border-color: rgba(0, 0, 0, 0.4); }
-  .wp-block[data-type="crown-blocks/testimonial-slider"] .wp-block-crown-blocks-testimonial-slider .testimonial-slider-testimonials > .inner {
-    display: block;
-    width: auto;
-    max-width: 900px;
-    position: relative;
-    left: 0;
-    -webkit-transform: none;
-        -ms-transform: none;
-            transform: none;
-    margin: 0 auto; }
-
-.wp-block[data-type="crown-blocks/tabbed-content"] .wp-block-crown-blocks-tabbed-content {
-  border: 1px dashed rgba(0, 0, 0, 0.4);
-  padding: 20px; }
-
-.wp-block[data-type="crown-blocks/tabbed-content-tab"] .wp-block-crown-blocks-tabbed-content-tab > .inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
-
-.wp-block[data-type="crown-blocks/tabbed-content-tab"] .wp-block-crown-blocks-tabbed-content-tab .tab-title {
-  color: #fff;
-  background-color: #888;
-  padding: 10px 16px;
-  line-height: 1.2;
-  font-size: 20px;
-  min-height: 44px;
-  min-width: 60px;
-  margin-bottom: -1px;
-  position: relative;
-  z-index: 1;
+.wp-block[data-type="crown-blocks/tabbed-content"] > .crown-block-editor-container > .wp-block-crown-blocks-tabbed-content .tabbed-content-tabs > .inner {
   display: block; }
-
-.wp-block[data-type="crown-blocks/tabbed-content-tab"] .wp-block-crown-blocks-tabbed-content-tab .tab-contents {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 20px; }
 
 .wp-block[data-type="crown-blocks/container-featured-image"] + .wp-block[data-type="crown-blocks/container-featured-image"] {
   margin-top: -28px; }
