--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
@@ -45,33 +45,38 @@ h1 {
 .has-extra-extra-large-font-size { font-size: 3rem; @include media-breakpoint-up(lg) { font-size: 3.75rem; } }
 
 
-blockquote {
+blockquote,
+.wp-block-quote {
 	font-style: italic;
-	&.has-photo {
-		padding-left: 80px;
-		position: relative;
-		min-height: 60px;
-		.blockquote-photo {
-			display: block;	
+	font-family: $font-family-serif;
+	padding-left: 0;
+	border-left: none;
+	&.is-style-large {
+		font-size: 1.875rem;
+		line-height: $line-height-base;
+		p {
+			font-size: inherit;
+			line-height: inherit;
+		}
+		.wp-block-quote__citation,
+		cite {
+			font-size: 1.125rem;
+			text-align: inherit;
 		}
 	}
-	.blockquote-photo {
-		display: none;
-		width: 60px;
-		height: 60px;
-		position: absolute;
-		left: 0;
-		top: 0;
-		border-radius: 1000px;
-	}
-	.blockquote-footer {
-		margin-top: -0.5rem;
+	.wp-block-quote__citation,
+	cite {
+		display: block;
+		margin-top: -0.25rem;
 		font-size: 1rem;
 		color: inherit;
-		font-weight: 700;
-		&:before {
-			content: "~\00A0";
-		}
+		font-weight: 400;
+		font-family: $font-family-base;
+		opacity: 0.6;
+		font-style: normal;
+		// &:before {
+		// 	content: "~\00A0";
+		// }
 	}
 }
 
