--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -175,3 +175,74 @@
 		}
 	}
 }
+
+
+/*	Gallery
+---------------------------------------------------------*/
+
+.wp-block-gallery {
+	&.is-style-mosaic-8 {
+		padding: 1px;
+		.blocks-gallery-grid {
+			display: grid;
+			grid-template-columns: repeat(12, 1fr);
+			grid-gap: 1px;
+			width: 100%;
+		}
+		.blocks-gallery-item {
+			margin: 0;
+			width: auto;
+			display: flex;
+			position: relative;
+			overflow: hidden;
+			display: none;
+			@for $i from 1 through 8 { &:nth-child(#{$i}) { display: flex; } }
+			&:nth-child(1) { grid-column: span 4; grid-row: span 3; }
+			&:nth-child(2) { grid-column: span 3; grid-row: span 4; }
+			&:nth-child(3) { grid-column: span 5; grid-row: span 4; }
+			&:nth-child(4) { grid-column: span 4; grid-row: span 8; }
+			&:nth-child(5) { grid-column: span 4; grid-row: span 4; }
+			&:nth-child(6) { grid-column: span 4; grid-row: span 4; }
+			&:nth-child(7) { grid-column: span 3; grid-row: span 3; &:before { padding-top: percentage(1 / 3); } }
+			&:nth-child(8) { grid-column: span 5; grid-row: span 3; &:before { padding-top: percentage(1 / 3); } }
+			&:before {
+				content: '';
+				display: block;
+				height: 0;
+				flex: 0 0 0;
+				padding-top: percentage(2 / 3);
+			}
+			figure {
+				position: absolute;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				top: 0;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				transition: opacity 1s, transform 1s ease-out;
+				&.new {
+					opacity: 0;
+					transition-duration: 0s;
+					transform: scale(1.1);
+				}
+			}
+			a {
+				width: 100%;
+				height: 100%;
+				flex: 1;
+				object-fit: cover;
+			}
+			img {
+				width: 100%;
+				height: 100%;
+				flex: 1;
+				object-fit: cover;
+			}
+			figcaption {
+				display: none;
+			}
+		}
+	}
+}
