Adding a few more styles

--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -14550,6 +14550,12 @@ h1 {
     .has-extra-extra-large-font-size {
       font-size: 3.75rem; } }
 
+.is-style-sans-serif {
+  font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+
+.is-style-serif {
+  font-family: "utopia-std", serif; }
+
 blockquote,
 .wp-block-quote {
   font-style: italic;
