--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
@@ -44,6 +44,13 @@ h1 {
 .has-extra-large-font-size { font-size: 1.875rem; }
 .has-extra-extra-large-font-size { font-size: 3rem; @include media-breakpoint-up(lg) { font-size: 3.75rem; } }
 
+.is-style-sans-serif {
+	font-family: $font-family-sans-serif;
+}
+.is-style-serif {
+	font-family: $font-family-serif;
+}
+
 
 blockquote,
 .wp-block-quote {
