Adding pre-footer section

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -263,3 +263,8 @@ $modal-content-color:               $body-color !default;
 $modal-content-border-radius:       0 !default;
 
 $modal-title-line-height:           $headings-line-height !default;
+
+
+// Alerts
+
+$alert-border-radius:               0 !default;
