--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
@@ -28,6 +28,7 @@ body.mobile-menu-active {
 	color: #fff;
 	overflow: hidden;
 	visibility: hidden;
+	line-height: $line-height-base;
 	@include media-breakpoint-up(md) {
 		display: none;
 	}
