--- a/wp-content/themes/norcal-sbdc/assets/src/scss/style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import 'components/_buttons';
 @import 'components/_search-form';
 @import 'components/_pagination';
+@import 'components/_alerts';
 @import 'components/_modals';
 @import 'components/_other';
 @import 'components/_blocks';
