--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
@@ -44,7 +44,7 @@ label {
 	font-size: 0.875rem;
 	font-family: $font-family-sans-serif-alt;
 	font-weight: 700;
-	margin-bottom: 0;
+	margin-bottom: 0.25rem;
 }
 
 
