--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -142,3 +142,157 @@
 		transition: color .15s;
 	}
 }
+
+.inline-related-content-link {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	color: $dark;
+	@each $color, $value in $theme-colors {
+		&.inline-related-content-link-#{$color} {
+			color: $value;
+			> .inner,
+			> a > .inner {
+				border-color: $value;
+			}
+		}
+	}
+	&.alignwide {
+		@include media-breakpoint-up(md) { margin-left: -1rem; margin-right: -1rem; }
+		@include media-breakpoint-up(lg) { margin-left: -1.5rem; margin-right: -1.5rem; }
+		@include media-breakpoint-up(xl) { margin-left: -2rem; margin-right: -2rem; }
+		> .inner, > a > .inner {
+			@include media-breakpoint-up(md) { padding-left: 1rem; padding-right: 1rem; }
+			@include media-breakpoint-up(lg) { padding-left: 1.5rem; padding-right: 1.5rem; }
+			@include media-breakpoint-up(xl) { padding-left: 2rem; padding-right: 2rem; }
+		}
+	}
+	&.alignleft {
+		@include media-breakpoint-up(md) { margin-left: -1rem; margin-right: 2rem; float: left; width: calc(50% - 1rem + 1rem); }
+		@include media-breakpoint-up(lg) { margin-left: -1.5rem; width: calc(50% - 1rem + 1.5rem); }
+		@include media-breakpoint-up(xl) { margin-left: -2rem; width: calc(33.3333% - 1rem + 2rem); }
+		> .inner, > a > .inner {
+			@include media-breakpoint-up(md) { padding-left: 1rem; padding-right: 1rem; }
+			@include media-breakpoint-up(lg) { padding-left: 1.5rem; padding-right: 1.5rem; }
+			@include media-breakpoint-up(xl) { padding-left: 2rem; padding-right: 2rem; }
+		}
+		.cta-label { font-size: 1rem; }
+		.cta-title { font-size: 1.875rem; }
+	}
+	&.alignright {
+		@include media-breakpoint-up(md) { margin-right: -1rem; margin-left: 2rem; float: right; width: calc(50% - 1rem + 1rem); }
+		@include media-breakpoint-up(lg) { margin-right: -1.5rem; width: calc(50% - 1rem + 1.5rem); }
+		@include media-breakpoint-up(xl) { margin-right: -2rem; width: calc(33.3333% - 1rem + 2rem); }
+		> .inner, > a > .inner {
+			@include media-breakpoint-up(md) { padding-left: 1rem; padding-right: 1rem; }
+			@include media-breakpoint-up(lg) { padding-left: 1.5rem; padding-right: 1.5rem; }
+			@include media-breakpoint-up(xl) { padding-left: 2rem; padding-right: 2rem; }
+		}
+		.cta-label { font-size: 1rem; }
+		.cta-title { font-size: 1.875rem; }
+	}
+	> a {
+		display: block;
+		color: inherit;
+		transition: none;
+		&:hover {
+			.cta-title:after {
+				right: 0;
+				opacity: 1;
+			}
+		}
+		.cta-title {
+			&:after {
+				@include media-breakpoint-up(md) {
+					@include icon(map-get($icomoon-icons, arrow-right), icomoon);
+					position: relative;
+					margin-left: .5em;
+					top: .08em;
+					right: .25em;
+					transition: right ease-out .15s, opacity .15s;
+					opacity: 0;
+				}
+			}
+		}
+	}
+	> .inner,
+	> a > .inner {
+		border-top: 5px solid $dark;
+		border-bottom: 5px solid $dark;
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+		@include media-breakpoint-up(md) {
+			padding-top: 1.5rem;
+			padding-bottom: 1.5rem;
+		}
+	}
+	.cta-label {
+		margin: 0;
+		text-transform: uppercase;
+		letter-spacing: .1em;
+		font-family: $font-family-sans-serif-alt;
+		font-size: 1rem;
+		font-weight: 700;
+		line-height: $line-height-sm;
+		@include media-breakpoint-up(md) {
+			font-size: 1.125rem;
+		}
+	}
+	.cta-title {
+		margin: 0;
+		font-weight: 700;
+		line-height: $line-height-sm;
+		font-size: 1.875rem;
+		@include media-breakpoint-up(md) {
+			font-size: 2.375rem;
+		}
+	}
+}
+
+.wp-block-pullquote {
+	margin-top: 2rem;
+	margin-bottom: 2.5rem;
+	border-top: 5px solid $dark;
+	// border-bottom: 5px solid $dark;
+	padding: 1.5rem 0rem 0;
+	font-size: 1.5rem;
+	text-align: left;
+	@include media-breakpoint-up(md) {
+		padding: 2rem 1rem 0;
+		font-size: 1.875rem;
+	}
+	@include media-breakpoint-up(lg) {
+		padding: 2.5rem 1.5rem 0;
+	}
+	@include media-breakpoint-up(xl) {
+		padding: 2.5rem 2rem 0;
+	}
+	&.alignwide {
+		@include media-breakpoint-up(md) { margin-left: -1rem; margin-right: -1rem; }
+		@include media-breakpoint-up(lg) { margin-left: -1.5rem; margin-right: -1.5rem; }
+		@include media-breakpoint-up(xl) { margin-left: -2rem; margin-right: -2rem; }
+	}
+	&.alignleft {
+		max-width: none;
+		font-size: 1.5rem;
+		@include media-breakpoint-up(md) { margin-left: -1rem; margin-right: 2rem; float: left; width: calc(50% - 1rem + 1rem); }
+		@include media-breakpoint-up(lg) { margin-left: -1.5rem; width: calc(50% - 1rem + 1.5rem); }
+		@include media-breakpoint-up(xl) { margin-left: -2rem; width: calc(33.3333% - 1rem + 2rem); }
+	}
+	&.alignright {
+		max-width: none;
+		font-size: 1.5rem;
+		@include media-breakpoint-up(md) { margin-right: -1rem; margin-left: 2rem; float: right; width: calc(50% - 1rem + 1rem); }
+		@include media-breakpoint-up(lg) { margin-right: -1.5rem; width: calc(50% - 1rem + 1.5rem); }
+		@include media-breakpoint-up(xl) { margin-right: -2rem; width: calc(33.3333% - 1rem + 2rem); }
+	}
+	blockquote {
+		margin: 0;
+		&:before {
+			content: '“';
+			display: block;
+		}
+	}
+	p {
+		font-size: inherit;
+	}
+}
