--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
@@ -58,6 +58,7 @@ blockquote,
 	font-family: $font-family-serif;
 	padding-left: 0;
 	border-left: none;
+	line-height: $line-height-base;
 	&.is-style-large {
 		font-size: 1.875rem;
 		line-height: $line-height-base;
@@ -72,6 +73,7 @@ blockquote,
 		}
 	}
 	.wp-block-quote__citation,
+	.wp-block-pullquote__citation,
 	cite {
 		display: block;
 		margin-top: -0.25rem;
@@ -81,6 +83,7 @@ blockquote,
 		font-family: $font-family-base;
 		opacity: 0.6;
 		font-style: normal;
+		text-transform: none;
 		// &:before {
 		// 	content: "~\00A0";
 		// }
