--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -74,6 +74,55 @@ body {
 	}
 }
 
+.wp-block[data-type="core/pullquote"],
+.block-editor-block-list__block[data-type="core/pullquote"] {
+	&[data-align=wide] {
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+		@include media-breakpoint-up(md) { max-width: 900px + 32px; }
+		@include media-breakpoint-up(lg) { max-width: 900px + 48px; }
+		@include media-breakpoint-up(xl) { max-width: 900px + 64px; }
+	}
+	&[data-align=left] {
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+		@include media-breakpoint-up(md) { max-width: 900px + 32px; }
+		@include media-breakpoint-up(lg) { max-width: 900px + 48px; }
+		@include media-breakpoint-up(xl) { max-width: 900px + 64px; }
+		.wp-block > * {
+			position: relative;
+			float: none;
+			margin-right: 0;
+			@include media-breakpoint-up(md) { margin-left: -1rem; margin-right: 2rem; float: left; width: calc(50% - 1rem + 1rem); }
+			@include media-breakpoint-up(lg) { margin-left: -1.5rem; width: calc(50% - 1rem + 1.5rem); }
+			@include media-breakpoint-up(xl) { margin-left: -2rem; width: calc(33.3333% - 1rem + 2rem); }
+		}
+		.wp-block-pullquote { font-size: 1.5rem; }
+	}
+	&[data-align=right] {
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+		@include media-breakpoint-up(md) { max-width: 900px + 32px; }
+		@include media-breakpoint-up(lg) { max-width: 900px + 48px; }
+		@include media-breakpoint-up(xl) { max-width: 900px + 64px; }
+		.wp-block > * {
+			position: relative;
+			float: none;
+			margin-right: 0;
+			@include media-breakpoint-up(md) { margin-right: -1rem; margin-left: 2rem; float: right; width: calc(50% - 1rem + 1rem); }
+			@include media-breakpoint-up(lg) { margin-right: -1.5rem; width: calc(50% - 1rem + 1.5rem); }
+			@include media-breakpoint-up(xl) { margin-right: -2rem; width: calc(33.3333% - 1rem + 2rem); }
+		}
+		.wp-block-pullquote { font-size: 1.5rem; }
+	}
+	.wp-block-pullquote {
+		border-bottom: none;
+	}
+}
+
 .block-editor-block-list__block[data-type="crown-blocks/container"] {
 	> .wp-block[data-align="wide"] {
 		> .crown-block-editor-container > .wp-block-crown-blocks-container {
